@startuml

title __AFIS's Class Diagram__\n

  namespace yhames.pro.project.afis {
    enum ComparisonMethod {
    }
  }
  

  namespace yhames.pro.project.afis {
    class yhames.pro.project.afis.DatabaseConnection {
    }
  }
  

  namespace yhames.pro.project.afis {
    class yhames.pro.project.afis.Fingerprint {
    }
  }
  

  namespace yhames.pro.project.afis {
    class yhames.pro.project.afis.MatchServer {
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace matchers {
      class yhames.pro.project.afis.matchers.Match {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace matchers {
      abstract class yhames.pro.project.afis.matchers.Matcher {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace matchers {
      class yhames.pro.project.afis.matchers.SourceAFIS {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace requests {
      class yhames.pro.project.afis.requests.EnrollRequest {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace requests {
      class yhames.pro.project.afis.requests.HandshakeRequest {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace requests {
      class yhames.pro.project.afis.requests.MatchRequest {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace requests {
      abstract class yhames.pro.project.afis.requests.Request {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace responses {
      class yhames.pro.project.afis.responses.MatchResponse {
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace responses {
      abstract class yhames.pro.project.afis.responses.Response {
      }
    }
  }
  

  yhames.pro.project.afis.matchers.Match o-- yhames.pro.project.afis.Fingerprint : fingerprint
  yhames.pro.project.afis.matchers.SourceAFIS -up-|> yhames.pro.project.afis.matchers.Matcher
  yhames.pro.project.afis.requests.EnrollRequest -up-|> yhames.pro.project.afis.requests.Request
  yhames.pro.project.afis.requests.EnrollRequest o-- yhames.pro.project.afis.Fingerprint : toEnroll
  yhames.pro.project.afis.requests.HandshakeRequest -up-|> yhames.pro.project.afis.requests.Request
  yhames.pro.project.afis.requests.MatchRequest -up-|> yhames.pro.project.afis.requests.Request
  yhames.pro.project.afis.requests.MatchRequest o-- yhames.pro.project.afis.ComparisonMethod : method
  yhames.pro.project.afis.requests.MatchRequest o-- yhames.pro.project.afis.Fingerprint : probe
  yhames.pro.project.afis.responses.MatchResponse -up-|> yhames.pro.project.afis.responses.Response
  yhames.pro.project.afis.responses.MatchResponse o-- yhames.pro.project.afis.matchers.Match : match


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
